[gd_scene load_steps=4 format=3 uid="uid://dl7ms73wv6jed"]

[ext_resource type="Script" path="res://Scripts/MenuPausa.gd" id="1_7sxw2"]
[ext_resource type="Texture2D" uid="uid://c1phmbpx4c5vn" path="res://Assets/TileSet/fundopreto.png" id="2_11ljf"]
[ext_resource type="Texture2D" uid="uid://doxmpg0e8exy4" path="res://Assets/TileSet/PausePNG.png" id="3_mcyd3"]

[node name="MenuGameOver" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_7sxw2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 452.0
offset_top = 260.0
offset_right = 950.0
offset_bottom = 452.0

[node name="Fundo" type="Sprite2D" parent="VBoxContainer"]
modulate = Color(0.647059, 0.647059, 0.647059, 0.509804)
position = Vector2(251, 126)
scale = Vector2(9.43038, 5.57095)
texture = ExtResource("2_11ljf")

[node name="Pause" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(248, 0)
scale = Vector2(0.515741, 0.515741)
texture = ExtResource("3_mcyd3")

[node name="BotaoVoltar" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sair"

[node name="BotaoQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reiniciar
"

[node name="BotaoContinuar" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continuar
"

[connection signal="pressed" from="VBoxContainer/BotaoVoltar" to="." method="_on_botao_sair_pressed"]
[connection signal="pressed" from="VBoxContainer/BotaoQuit" to="." method="_on_botao_reiniciar_pressed"]
[connection signal="pressed" from="VBoxContainer/BotaoContinuar" to="." method="_on_botao_continuar_pressed"]
